Fix issues on mobile menu

--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -2589,14 +2589,15 @@ form > button.icon-button {
 #betta_menu ul li a .text {
   display: block;
   height: 1.5rem;
-  padding: 0.5rem;
+  padding: 0.25rem 0.75rem;
   line-height: 1.5rem;
 }
 
-#betta_menu ul li a .text {
-  padding: 0.25rem 0.75rem;
+@media (max-width: 800px) {
+  #betta_menu ul li a .text {
+    margin-top: 1.5rem;
+  }
 }
-
 #betta_menu ul li a.active {
   background: #e0e0e0;
 }
@@ -2657,11 +2658,6 @@ form > button.icon-button {
     margin-left: auto;
   }
 
-  #betta_menu > ul {
-    position: absolute;
-    bottom: 6rem;
-  }
-
   #betta_menu,
 .sidebar {
     display: none;
@@ -2670,7 +2666,13 @@ form > button.icon-button {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    /*
+    Fix for mobile browsers that hide
+    the browser bar on top on scroll.
+    */
+    padding-bottom: 10rem;
+    bottom: -5rem;
+    /*---*/
     overflow-y: scroll;
   }
 
@@ -2679,13 +2681,14 @@ form > button.icon-button {
     display: block;
   }
 
-  #betta_menu > ul > li {
+  #betta_menu ul li {
     display: block;
     text-align: left;
     margin-bottom: 0.75rem;
+    text-align: center;
   }
 
-  #betta_menu > ul > li > a {
+  #betta_menu ul li a {
     font-size: 1.25rem;
     line-height: 1.75rem;
     letter-spacing: 0.05rem;
